--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "alumnai-backend",
-  "version": "1.0.0",
+  "name": "alumni-backend",
+  "version": "0.0.5",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
