--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "blurhash": "^2.0.5",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.0",
     "sequelize": "^6.32.1",
+    "sharp": "^0.32.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
