--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.0",
+    "nodemailer": "^6.9.4",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.4",
     "uuid": "^9.0.0"
