--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alumni-backend",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "blurhash": "^2.0.5",
+    "cloudinary": "^1.40.0",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
