--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-    NODE_VERSION: '18-lts'
+    NODE_VERSION: [14.x, 16.x]
     AZURE_WEBAPP_NAME: 'alumni-system-backend'
     AZURE_WEBAPP_PACKAGE_PATH: '.'
     NODE_ENV: 'production'
