--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "SET NODE_ENV=dev&& nodemon app.js",
-    "test": "mocha src/test --exit"
+    "test": "mocha src/test --timeout 10000 --exit"
   },
   "author": "Mazin Islam",
   "license": "ISC",
