--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.4.0",
-    "nodemailer": "^6.9.4",
-    "sequelize": "^6.32.1",
+    "multer": "1.4.5-lts.1",
+    "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.5",
+    "pdfkit": "^0.13.0",
+    "sequelize": "^6.33.0",
     "sinon": "^15.2.0",
     "uuid": "^9.0.0"
   },
