--- a/.github/workflows/main_rafiki-backend.yml
+++ b/.github/workflows/main_rafiki-backend.yml
@@ -11,7 +11,6 @@ env:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,14 +18,18 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
-
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+    steps:
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'rafiki-backend'
