--- a/.github/workflows/main_rafiki-backend.yml
+++ b/.github/workflows/main_rafiki-backend.yml
@@ -10,7 +10,8 @@ env:
   NODE_ENV: 'production'
 
 jobs:
-  build:
+  build-and-deploy:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,18 +19,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
+
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-    steps:
       - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'rafiki-backend'
