fix: generate cv crashes on missing field
Added middleware to check the fields existence

--- a/.github/workflows/main_rafiki-backend.yml
+++ b/.github/workflows/main_rafiki-backend.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build-and-deploy:
-    name: Build
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
