--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mazin Islam",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "chai": "^4.3.8",
     "cloudinary": "^1.40.0",
