--- a/.github/workflows/main_rafiki-backend.yml
+++ b/.github/workflows/main_rafiki-backend.yml
@@ -31,7 +31,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'rafiki-backend'
+          app-name: 'rafiki-backend1'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
